<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:text="@string/practice_search_description"
        android:id="@+id/practiceSearchText"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/practiceSearchEdit"
        android:hint="@string/practiceSearchEditHint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:text="@string/practiceSearchStartByNameText"
        android:id="@+id/practiceSearchStartByName"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practiceSearchStartByLocationText"
        android:id="@+id/practiceSearchStartByLocation"/>
</LinearLayout>